<resources>
    <string name="app_name">Alura Viagem</string>
    <string name="banner_inicial_do_pacote">Banner inicial do pacote</string>
    <string name="texot_especiais">Texot especiais</string>
    <string name="especiais">Especiais</string>
    <string name="texto_pa_s">Texto país</string>
    <string name="brasil">Brasil</string>
    <string name="imagem_do_pacote_de_viagem">Imagem do pacote de viagem</string>
    <string name="separa_o_entre_a_imagem_e_string_texto_pa_s">Separação entre a imagem e @string/texto_pa_s</string>
    <string name="s_o_paulo">São Paulo</string>
    <string name="n_mero_de_dias">Número de dias</string>
    <string name="_2_dias">2 dias</string>
    <string name="pre_o_do_string_banner_inicial_do_pacote">Preço do @string/banner_inicial_do_pacote</string>
    <string name="r_243_99">R$ 243,99</string>
    <string name="preco_final">Preço final:</string>
    <string name="string_preco_final">Texto que representa o preço final</string>
    <string name="image_do_local_que_o_pacote_se_refere">Image do local que o pacote se refere</string>
    <string name="realizar_pagamento">REALIZAR PAGAMENTO</string>
    <string name="texto_topo_activity_pagamento">Digiti as informações do cartão de crédito que você deseja usar para o pagamento</string>
    <string name="nome_cartao_digits">abcdefghijlmnopqrstuvxzABCDEFGHIJLMNOPQSTUVX  </string>
</resources>
