<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.CardView
        android:id="@+id/item_pacote_cardview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="@android:dimen/app_icon_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/item_pacote_image_local"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:contentDescription="@string/imagem_do_pacote_de_viagem"
                android:scaleType="centerCrop"
                android:src="@drawable/sao_paulo_sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@sample/pacote.json/pacotes/imagem" />

            <TextView
                android:id="@+id/item_pacote_text_local"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@android:drawable/screen_background_dark_transparent"
                android:contentDescription="@string/separa_o_entre_a_imagem_e_string_texto_pa_s"
                android:padding="8dp"
                android:text="@string/s_o_paulo"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/item_pacote_image_local"
                app:layout_constraintEnd_toEndOf="@id/item_pacote_image_local"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/item_pacote_image_local"
                app:layout_constraintTop_toTopOf="@id/item_pacote_image_local"
                app:layout_constraintVertical_bias="1.0"
                tools:text="@sample/pacote.json/pacotes/local" />

            <View
                android:id="@+id/item_pacote_divisor"
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:background="#CD4400"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/item_pacote_image_local" />

            <TextView
                android:id="@+id/item_pacote_text_dias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:contentDescription="@string/n_mero_de_dias"
                android:text="@string/_2_dias"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/item_pacote_divisor"
                tools:text="@sample/pacote.json/pacotes/dias" />

            <TextView
                android:id="@+id/item_pacote_text_valor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/pre_o_do_string_banner_inicial_do_pacote"
                android:text="@string/r_243_99"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/item_pacote_text_dias"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/item_pacote_text_dias"
                app:layout_constraintTop_toBottomOf="@id/item_pacote_text_dias"
                tools:text="@sample/pacote.json/pacotes/preco" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>